--- a/Four-card/css/style.css
+++ b/Four-card/css/style.css
@@ -1,7 +1,103 @@
+/* Fonts  */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap');
+
+
+/* -------- */
+
 html{
     font-size: 10px;
+    font-family: "Poppins", sans-serif;
 }
 
 body{
     background-color: #EFEFF4;
+}
+
+.container{
+    margin: 70px auto;
+
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+/* header */
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #4D4F62;
+    text-align: center;
+}
+
+header h1{
+    font-size: 36px;
+}
+
+header .light{
+    font-weight: 200;
+}
+
+header .bold{
+    font-weight: 600;
+    margin-top: 15px;
+}
+
+header p{
+    font-weight: 400;
+    opacity: 0.5;
+    font-size: 15px;
+    margin-top: 30px;
+}
+
+/* Card */
+
+.card{
+    display: grid;
+    grid-template-columns: 350px 350px 350px;
+    grid-template-rows: 125px 125px 125px 125px;
+    gap: 20px;
+    position: relative;
+    margin-top: 70px;
+}
+
+.team{
+    background-color: white;
+    border-radius: 4px;
+    border-top: 3px solid #EA5454;
+    grid-column: 2 / 2;
+    grid-row: 1/ span 2;
+    height: 100%;
+}
+
+.supervisor{
+    background-color: white;
+    border-radius: 4px;
+    border-top: 3px solid #44D3D2;
+    grid-column: 1 / 1;
+    grid-row: 2/ span 2;
+    height: 100%;
+}
+
+.karma{
+    background-color: white;
+    border-radius: 4px;
+    border-top: 3px solid #FCAE4A;
+    grid-column: 2 / 2;
+    grid-row: 3 / span 2;
+    height: 100%;
+}
+
+.calculator{
+    background-color: white;
+    border-radius: 4px;
+    border-top: 3px solid #549EF2;
+    grid-column: 3 / 3;
+    grid-row: 2 / span 2;
+    height: 100%;
 }
