--- a/Four-card/css/style.css
+++ b/Four-card/css/style.css
@@ -8,6 +8,7 @@
 html{
     font-size: 10px;
     font-family: "Poppins", sans-serif;
+    color: #4D4F62;
 }
 
 body{
@@ -31,12 +32,11 @@ header{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    color: #4D4F62;
     text-align: center;
 }
 
 header h1{
-    font-size: 36px;
+    font-size: 3.6rem;
 }
 
 header .light{
@@ -51,17 +51,17 @@ header .bold{
 header p{
     font-weight: 400;
     opacity: 0.5;
-    font-size: 15px;
+    font-size: 1.5rem;
     margin-top: 30px;
 }
 
-/* Card */
+/* Card-grid */
 
 .card{
     display: grid;
     grid-template-columns: 350px 350px 350px;
     grid-template-rows: 125px 125px 125px 125px;
-    gap: 20px;
+    gap: 30px;
     position: relative;
     margin-top: 70px;
 }
@@ -71,8 +71,7 @@ header p{
     border-radius: 4px;
     border-top: 3px solid #EA5454;
     grid-column: 2 / 2;
-    grid-row: 1/ span 2;
-    height: 100%;
+    grid-row: 1 / span 2;
 }
 
 .supervisor{
@@ -81,7 +80,6 @@ header p{
     border-top: 3px solid #44D3D2;
     grid-column: 1 / 1;
     grid-row: 2/ span 2;
-    height: 100%;
 }
 
 .karma{
@@ -90,7 +88,6 @@ header p{
     border-top: 3px solid #FCAE4A;
     grid-column: 2 / 2;
     grid-row: 3 / span 2;
-    height: 100%;
 }
 
 .calculator{
@@ -99,5 +96,22 @@ header p{
     border-top: 3px solid #549EF2;
     grid-column: 3 / 3;
     grid-row: 2 / span 2;
-    height: 100%;
+}
+
+/* Intérieur card  */
+
+.container-card{
+    margin: 26px 32px;
+}
+
+.container-card h2{
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.container-card p{
+    opacity: 0.5;
+    font-size: 1.3rem;
+    font-weight: 400;
+    margin-top: 14px;
 }
