--- a/Four-card/css/style.css
+++ b/Four-card/css/style.css
@@ -59,7 +59,7 @@ header p{
 
 .card{
     display: grid;
-    grid-template-columns: 350px 350px 350px;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 125px 125px 125px 125px;
     gap: 30px;
     position: relative;
@@ -129,4 +129,55 @@ header p{
     position: absolute;
     bottom: 26px;
     right: 32px;
+}
+
+@media only screen and (max-width: 580px){
+    header h1{
+        font-size: 2.4rem;
+    }
+
+    .card{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 222px 222px 222px 222px;
+        gap: 30px;
+        position: relative;
+        margin-top: 70px;
+    }
+
+    .team{
+        background-color: white;
+        border-radius: 4px;
+        border-top: 5px solid #EA5454;
+        grid-column: 2;
+        grid-row: 2;
+        box-shadow: 2px 19px 21px 0px rgba(77,79,98,0.37);
+    }
+    
+    .supervisor{
+        background-color: white;
+        border-radius: 4px;
+        border-top: 5px solid #44D3D2;
+        grid-column: 2;
+        grid-row: 1;
+        box-shadow: 2px 19px 21px 0px rgba(77,79,98,0.37);
+    }
+    
+    .karma{
+        background-color: white;
+        border-radius: 4px;
+        border-top: 5px solid #FCAE4A;
+        grid-column: 2 ;
+        grid-row: 3;
+        box-shadow: 2px 19px 21px 0px rgba(77,79,98,0.37);
+    }
+    
+    .calculator{
+        background-color: white;
+        border-radius: 4px;
+        border-top: 5px solid #549EF2;
+        grid-column: 2;
+        grid-row: 4;
+        box-shadow: 2px 19px 21px 0px rgba(77,79,98,0.37);
+    }
 }
